# sherlockdogs

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
docs/: architecture.md  evidence-plan.md  launch-assets.md  openai-codex-for-oss-application.md  public-beta-launch-checklist.md  readme-benchmark.md
docs/assets/: release-supported-sources-source.html
examples/: README.md
releases/1.0-public-beta/: README.md  RELEASE_NOTES.md
releases/1.0-public-beta/ci/: public-windows-release-smoke.yml  windows-runtime-smoke.yml  windows-wechat-db-sim-smoke.yml
releases/1.0-public-beta/docs/: PUBLIC_BETA_DECISION.json  PUBLIC_BETA_DECISION.md  PUBLIC_BETA_MANIFEST.txt  PUBLIC_BETA_OPERATOR.md  PUBLIC_BETA_READINESS.md  SHARE_PUBLIC_BETA.md
releases/1.0-public-beta/evidence/mobile-entry-smoke/: 20260604-105632-wechat-inbox-bc01a246c6.txt
releases/1.0-public-beta/evidence/windows-runtime-smoke/: runtime-smoke-b885c8355f71.txt
releases/1.0-public-beta/macos/Sherlockdogs-macos-alpha-1.0.0-alpha.3/: CHECKSUMS.txt  Configure Nutstore Inbox.command  INSTALL_GUIDE_FOR_AI.md  IOS_SHORTCUTS_GUIDE.md  MAC_PACKAGE_BRIEF.md  OneTouchRepair.command  PHONE_NUTSTORE_SETUP.md  PRODUCT_INTRO_AND_RISK_DISCLOSURE.md  README.md  RELEASE_MANIFEST.txt  RELEASE_NOTES.md  Repair Sherlockdogs.command  START_HERE.md  TROUBLESHOOTING.md  Uninstall Sherlockdogs.command
releases/1.0-public-beta/windows/Sherlockdogs-windows-alpha-1.0.0-alpha.2/: CHECKSUMS.txt  Collect Windows WeChat Evidence.cmd  (+20 more)
scripts/: render_github_hero.py
sherlockdogs/: __init__.py  cli.py  ingest.py
(+117 files in other folders)
